# starter-genai

./: README.md  docker-compose-pgvector.yml  pyproject.toml
src/: 1_call_model.py  2_create_vector_store.py  3_search.py  4_function_calling.py  tools.py
