[tool.poetry]
name = "genai-starter"
version = "0.1.0"
description = ""
authors = ["Maxime Thoonsen <m@maximeai.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"
pypdf = "^4.2.0"
langchain-postgres = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
